plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
	id 'com.google.protobuf' version '0.9.4' // Protobuf 플러그인
}

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}




allprojects {
	apply plugin: 'java'
	apply plugin: 'io.spring.dependency-management'

	group = 'com.be'
	version = '0.0.1-SNAPSHOT'

	repositories {
		mavenCentral()
	}

	dependencyManagement {
		imports {
			mavenBom "org.springframework.cloud:spring-cloud-dependencies:2023.0.2"
		}
	}
}

subprojects {
	apply plugin: 'org.springframework.boot'

	configurations {
		compileOnly {
			extendsFrom annotationProcessor
		}
	}

	dependencies {
		implementation 'org.springframework.boot:spring-boot-starter-web'
		compileOnly 'org.projectlombok:lombok:1.18.28'
		annotationProcessor 'org.projectlombok:lombok:1.18.28'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
		testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
		implementation 'org.springframework.boot:spring-boot-starter'

		// Spring WebFlux 의존성 추가
		implementation 'org.springframework.boot:spring-boot-starter-webflux'

		implementation 'io.netty:netty-resolver-dns-native-macos:4.1.96.Final:osx-aarch_64'

		// validation 의존성 추가
		implementation 'org.springframework.boot:spring-boot-starter-validation'
	}


}


tasks.named('test') {
	useJUnitPlatform()
}